[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone_fleet_autonomy_safety_supervisor"
version = "0.1.0"
description = "Coordinate drone fleet missions with safety and compliance guardrails."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
